--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="bod_color">
+    <button class="btnRed" onclick="red()">Red</button>
+    <button class="btnWhite" onclick="white()">White</button>
     <script src="easy/easy.js"></script>
     <script src="medium/medium.js"></script>
     <script src="hard/hard.js"></script>
